tests/language_tests/fail/0009_keyword_as_variable_name.ee
fn main() {
    let let = 1;
}
